--- a/index.html
+++ b/index.html
@@ -61,32 +61,44 @@
             <div class="page-content homepagecontent">	
 
                         <div class="homenavbar">
-                                <img src="images/logo.png">								
+                                <h1>Union <span>Church</span></h1>							
                         </div>
 			
 			<nav class="main-nav">
 			<ul>
 			
-			<li class="navbg2"><a href="featured_photo.html" class="navbgtransblack"><img src="images/icons/white/movie.png" alt="" title="" /><span>Featured</span></a></li>
+			<li class="navbg1"><a href="featured_photo.html" class="navbgtransblack"><img src="images/icons/white/featured.png" alt="" title="" /><span>Featured</span></a></li>
 			
+			<li class="navbg2"><a href="service_video.html" class="navbgtransblack"><img src="images/icons/white/servicevedio.png" alt="" title="" /><span>Service Videos</span></a></li>
 
-			<li class="navbg3"><a href="service_video.html" class="navbgtransblack"><img src="images/icons/white/trending.png" alt="" title="" /><span>Service Videos</span></a></li>
-			<li class="navbg4"><a href="events.html" class="navbgtransgreen"><img src="images/icons/white/trailer.png" alt="" title="" /><span>Events</span></a></li>	
+			<li class="navbg3"><a href="events.html" class="navbgtransgreen"><img src="images/icons/white/trailer.png" alt="" title="" /><span>Events</span></a></li>	
 			
-			<li class="navbg5"><a href="speaking_engagement.html" class="navbgtransred"><img src="images/icons/white/top.png" alt="" title="" /><span>Speaking Engagements</span></a></li>
-			<li class="navbg6"><a href="testimonials.html" class="navbgtransblack"><img src="images/icons/white/box.png" alt="" title="" /><span>Testimonials</span></a></li>
+			<li class="navbg4"><a href="speaking_engagement.html" class="navbgtransred"><img src="images/icons/white/speaking engagement.png" alt="" title="" /><span>Speaking Engagements</span></a></li>
+
+			<li class="navbg5"><a href="testimonials.html" class="navbgtransblack"><img src="images/icons/white/box.png" alt="" title="" /><span>Testimonials</span></a></li>
 			
+			<li class="navbg6"><a href="week_sch.html" class="navbgtransblack"><img src="images/icons/white/form.png" alt="" title="" /><span>Weekly Schedule</span></a></li>
 
-			<li class="navbg7"><a href="week_sch.html" class="navbgtransblack"><img src="images/icons/white/form.png" alt="" title="" /><span>Weekly Schedule</span></a></li>
-			<li class="navbg8"><a href="announcement.html" class="navbgtransyellow"><img src="images/icons/white/message.png" alt="" title="" /><span>Announcement</span></a></li>
+			<li class="navbg7"><a href="announcement.html" class="navbgtransyellow"><img src="images/icons/white/message.png" alt="" title="" /><span>Announcement</span></a></li>
 			
-			<li class="navbg9"><a href="live_stream.html" data-popup=".popup-login" class="navbgtransviolet"><img src="images/icons/white/umovie.png" alt="" title="" /><span>Live Stream</span></a></li>
-			<li class="navbg12"><a href="about.html"><img src="images/icons/white/blog.png" alt="" title="" /><span>About</span></a></li>
+			<li class="navbg8"><a href="live_stream.html" data-popup=".popup-login" class="navbgtransviolet"><img src="images/icons/white/umovie.png" alt="" title="" /><span>Live Stream</span></a></li>
 
-      <li class="navbg11"><a href="pastor_speak.html" data-popup=".popup-social" class="open-popup"><img src="images/icons/white/facebook.png" alt="" title="" /><span>Pastor Speak</span></a></li>
-<li class="navbg10"><a href="support.html"><img src="images/icons/white/blog.png" alt="" title="" /><span>Support</span></a></li>
+			<li class="navbg9"><a href="about.html"><img src="images/icons/white/about.png" alt="" title="" /><span>About</span></a></li>
 
-      <li class="navbg1"><a href="contact.html" data-popup=".popup-social" class="open-popup"><img src="images/icons/white/facebook.png" alt="" title="" /><span>Contact</span></a></li>
+      <li class="navbg10"><a href="pastor_speak.html" data-popup=".popup-social" class="open-popup"><img src="images/icons/white/pasterspeak.png" alt="" title="" /><span>Pastor Speak</span></a></li>
+
+     <li class="navbg11"><a href="support.html"><img src="images/icons/white/supporticon.png" alt="" title="" /><span>Support</span></a></li>
+
+      <li class="navbg12"><a href="contact.html" data-popup=".popup-social" class="open-popup"><img src="images/icons/white/contacticon.png" alt="" title="" /><span>Contact</span></a></li>
+
+      <li class="navbg13"><a href="testimonials.html" class="navbgtransblack"><img src="images/icons/white/podcast.png" alt="" title="" /><span>Podcast</span></a></li>
+      
+      <li class="navbg14"><a href="form.html" class="navbgtransblack"><img src="images/icons/white/membership.png" alt="" title="" /><span>Apply for Membership</span></a></li>
+
+      <li class="navbg15"><a href="form.html" class="navbgtransyellow"><img src="images/icons/white/baptism.png" alt="" title="" /><span>Apply for Baptism</span></a></li>
+      
+      <li class="navbg16"><a href="form.html" data-popup=".popup-login" class="navbgtransviolet"><img src="images/icons/white/marriage.png" alt="" title="" /><span>Marriage Application</span></a></li>
+
 
 			</ul>
 			</nav>	    
